--- a/_posts/projects/2020-08-10-Project-1.md
+++ b/_posts/projects/2020-08-10-Project-1.md
@@ -5,7 +5,7 @@ descrption: "A Project Description"
 date:   2020-08-10 20:01:21 -0400
 type: card-img-top
 categories: latin text
-image: /assets/img/example.jpeg
+image: /assets/img/posts/blog2.jpg
 caption:
 last-updated: 2020-10-26 20:01:21 -0400
 categories: project
