update bibliography formatting

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 
 @article{einstein1950meaning,
   abbr={AJP},
+  tag={test},
   title={The meaning of relativity},
   author={Einstein, Albert and Taub, AH},
   journal={American Journal of Physics,},
