incorporate custom highlighter link styling from https://codepen.io/melnik909/pen/KGxdjY

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,9 @@
   journal={American Journal of Physics,},
   volume={18},
   number={6},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
   pages={403--404},
   year={1950},
   publisher={American Association of Physics Teachers,}
@@ -41,6 +44,9 @@
   number={8},
   pages={549--560},
   year={1905},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
   publisher={Wiley Online Library}
 }
 
@@ -50,6 +56,9 @@
   author={Einstein, A.},
   journal={Ann. Phys.,},
   volume={17},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
   pages={549--560},
   year={1905}
 }
@@ -57,5 +66,8 @@
 @article{einstein1905electrodynamics,
   title={On the electrodynamics of moving bodies},
   author={Einstein, A.},
-  year={1905}
+  year={1905},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf}
 }
