--- a/_bibliography/presentations.bib
+++ b/_bibliography/presentations.bib
@@ -1,22 +1,17 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
-}
-
 @article{einstein1950meaning,
   abbr={AJP},
+  tag={test},
   title={The meaning of relativity},
   author={Einstein, Albert and Taub, AH},
   journal={American Journal of Physics,},
   volume={18},
   number={6},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
   pages={403--404},
   year={1950},
   publisher={American Association of Physics Teachers,}
@@ -26,7 +21,6 @@
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
   author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
   journal={Phys. Rev.,},
   volume={47},
   issue={10},
@@ -50,6 +44,9 @@
   number={8},
   pages={549--560},
   year={1905},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
   publisher={Wiley Online Library}
 }
 
@@ -59,6 +56,9 @@
   author={Einstein, A.},
   journal={Ann. Phys.,},
   volume={17},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf},
   pages={549--560},
   year={1905}
 }
@@ -66,5 +66,8 @@
 @article{einstein1905electrodynamics,
   title={On the electrodynamics of moving bodies},
   author={Einstein, A.},
-  year={1905}
+  year={1905},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf={example_pdf.pdf}
 }
